--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 @import "tailwindcss";
 
 @theme {
     /* font */
-    --font-sans: "system-ui", "sans-serif";
+    --font-sans: "Inter", "system-ui", "sans-serif";
 
     /* Background Colors */
     --color-background: #f3f4f6;
